# 30-days-of-language-models

./: .gitignore  README.md
training-own-tokenizer/: pyproject.toml
training-own-tokenizer/notebooks/: training_own_tokenizer.ipynb
training-own-tokenizer/toks/llama3-stackoverflow/: tokenizer.json  tokenizer_config.json
