[tool.poetry]
name = "training-own-tokenizer"
version = "0.1.0"
description = ""
authors = ["Sinsankio"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
datasets = "^2.21.0"
transformers = {extras = ["sentencepiece"], version = ">=4.55.4,<5.0.0"}
git-lfs = "^1.6"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
lab = "^8.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
